# aidatlu

./: .buildinfo  .gitignore  Configuration.html  Constellation.html  Documentation.html  Introduction.html  README.md  genindex.html  hardware_code.html  index.html  main_code.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py
.doctrees/: Configuration.doctree  Constellation.doctree  Documentation.doctree  Introduction.doctree  environment.pickle  hardware_code.doctree  index.doctree  main_code.doctree
.github/workflows/: documentation.yml  pre-commit.yml  pre_commit.yml  tests.yml  wheels.yml  workflow.yml  workflows.yml
EUDETdummy/constraints/: EUDET_dummy_constr.xdc  I2C_constr.xdc  enclustra_ax3_pm3.tcl
EUDETdummy/hdl/: Dummy_DUT.vhd  Dummy_DUT_Toplevel.vhd  Register_Controller.vhd  TLU_Address_Map.vhd  TLU_address_map_v0-2.vhdl  Trigger_Number_Error_Checker.vhd  ZestSC1_Host.vhd  ZestSC1_Interfaces.vhd  delay.vhd  delay_word.vhd  dtype.vhdl  dummyEventBuffer_rtl.vhd  enclustra_ax3_pm3_infra.vhd  eth_7s_rgmii.vhd  fmcTLU_pkg.vhd  ipbus_addr_decode.vhd  ipbus_decode_ipbus_example.vhd  ipbus_decode_tlu.vhd  ipbus_example.vhd  ipbus_slaves.vhd  ipbus_ver.vhd  logic_clocks_rtl.vhd  top_EUDET_dummy.vhd
EUDETdummy/scripts/: EUDETdummy.py  EUDETdummyaddrmap.xml  EUDETdummyconnection.xml  EUDummy_testscript.py  startDUMMY.sh  startEUDETdummy.py
_modules/: index.html
_sources/: Configuration.rst.txt  Constellation.rst.txt  Documentation.rst.txt  Introduction.rst.txt  hardware_code.rst.txt  main_code.rst.txt
aidatlu/: README.md  TLUPyProducer.py  aidatlu.py  aidatlu_run.py  clock_controller.py  conf.yaml  config_parser.py  data_parser.py  dut_controller.py  event_handler.py  i2c.py  ioexpander_controller.py  led_controller.py  logger.py  output_controller.py  start_tlu.sh  test.ipynb  test.py  tlu.py  tlu_configuration.yaml  trigger_controller.py  utils.py  voltage_controller.py
aidatlu.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
miniTLU/: .ftpconfig  I2CuHal.py  I2cBusProperties.py  aida_mini_tlu_addr_map.txt  connection.xml  miniTLU.py  miniTLU.xml  miniTLU_old.xml  startTLU_v6.sh  startTLU_v8.py  test_T0.py
(+100 files in other folders)
