[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aidatlu"
dynamic = ["version"]
license = { "text" = "AGPL-3.0" }
description = "Control software for AIDA-2020 TLU"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
authors = [
    {name = "Rasmus Partzsch", email="rasmus.partzsch@uni-bonn.de"},
    {name = "Christian Bespin", email="cbespin@uni-bonn.de"}
]
dependencies = [
    "numpy",
    "tables",
    "coloredlogs",
    "pyzmq",
    "tqdm"
]

[project.urls]
"Documentation" = "https://silab-bonn.github.io/aidatlu/"
"Repository" = "https://github.com/SiLab-Bonn/aidatlu/"

[project.optional-dependencies]
hw = ["online_monitor"]  # uhal package needs to be installed manually!
test = ["pytest", "coverage"]
doc = ["sphinx", "myst_parser", "sphinx_mdinclude", "pydata-sphinx-theme"]

[tool.setuptools.dynamic]
version = {attr = "aidatlu.__version__"}
